conf/ntfy/ntfy-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: ntfy
  labels:
    app: ntfy

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ntfy
        version: v2.29.0
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.29.0
          args: ["serve"]
          # args: ["serve", "--enable-signup", "--enable-login",  "--auth-file=/var/cache/ntfy/user.db"]
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
              protocol: TCP
              name: ntfy-http
          volumeMounts:
            - name: config-volume
              mountPath: /etc/ntfy
              subPath: server.yaml
            - name: cache-volume
              mountPath: /var/cache/ntfy
      restartPolicy: Always
      volumes:
        - name: cache-volume
          persistentVolumeClaim:
            claimName: ntfy-pvc
        - name: config-volume
          configMap:
            name: ntfy-config
