conf/ntfy/ntfy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy-svc

spec:
  selector:
    app: ntfy
  ports:
    - name: ntfy-http-svc
      protocol: TCP
      port: 80
      targetPort: 80
