conf/ntfy/ntfy-ingress-tls.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect-ntfy
  # namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`ntfy.idcrook.dev`)
      services:
        - name: ntfy-svc
          port: 80
      middlewares:
        - name: redirect-to-https

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-ntfy

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ntfy.idcrook.dev`)
      services:
        - name: ntfy-svc
          port: 80
      middlewares:
#        - name: my-traefik-auth-with-exceptions
#        - name: default-tinyauth@kubernetescrd
  tls:
    certResolver: wildcardresolver
